Unit- und Integrationstests für ProjectController, ProjectService und ExceptionHandler hinzugefügt und Repository um weitere Methoden erweitert